jstests/core/administrative/profile/profile_find.js
@@ -11,7 +11,6 @@
 import {
     ClusteredCollectionUtil
 } from "jstests/libs/clustered_collections/clustered_collection_util.js";
-import {FeatureFlagUtil} from "jstests/libs/feature_flag_util.js";
 import {isLinux} from "jstests/libs/os_helpers.js";
 import {getLatestProfilerEntry} from "jstests/libs/profiler.js";
 
@@ -19,13 +18,6 @@ var testDB = db.getSiblingDB("profile_find");
 assert.commandWorked(testDB.dropDatabase());
 const collName = jsTestName();
 var coll = testDB.getCollection(collName);
-
-// TODO SERVER-87377: Remove this check when replanReason is properly populated for classic runtime
-// planning for SBE.
-if (FeatureFlagUtil.isPresentAndEnabled(db, "ClassicRuntimePlanningForSbe")) {
-    jsTestLog("Skipping test since featureFlagClassicRuntimePlanningForSbe is enabled");
-    quit();
-}
 
 // Don't profile the setFCV command, which could be run during this test in the
 // fcv_upgrade_downgrade_replica_sets_jscore_passthrough suite.
